kubernetes-networks/web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  containers:
    - name: nginx
      image: funbiscuit/otus-web
      volumeMounts:
        - name: app
          mountPath: /app
      readinessProbe:
        httpGet:
          path: /index.html
          port: 80
      livenessProbe:
        tcpSocket:
          port: 8000
  volumes:
    - name: app
      emptyDir: {}
